--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorRipple">#50000000</color>
 
     <color name="colorAnniBackgroundTint">#A0000000</color>
+
+    <color name="colorSplitLine">#FFFFFF</color>
 </resources>
