--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorRipple">#20000000</color>
 
     <color name="colorAnniBackgroundTint">#80FFFFFF</color>
+
+    <color name="colorSplitLine">#000000</color>
 </resources>
