--- a/app/src/main/res/layout/layout_floating_ball.xml
+++ b/app/src/main/res/layout/layout_floating_ball.xml
@@ -11,21 +11,18 @@
             type="OnClickListener" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageButton
+        <TextView
             android:id="@+id/floating_button"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:background="@null"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:focusable="true"
+            android:clickable="true"
             android:onClick="@{view -> onClickListener.onClick(view)}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_floating_ball"
-            tools:ignore="contentDescription"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:background="@drawable/ic_floating_ball"/>
+
+    </LinearLayout>
 </layout>
