修改 小米电纸书平台包名 新增 中文 新增 悬浮球双击返回桌面

--- a/app/src/main/res/drawable/ic_floating_ball.xml
+++ b/app/src/main/res/drawable/ic_floating_ball.xml
@@ -4,8 +4,10 @@
         <shape
             android:shape="oval">
             <stroke android:color="@color/colorFloatingBorder"
-                android:width="4dp" />
-            <solid android:color="@color/colorFloatingInner" />
+                android:width="2dp"
+                android:dashGap="16dp"
+                android:dashWidth="2dp"/>
+<!--            <solid android:color="@color/colorFloatingInner" />-->
         </shape>
     </item>
 </selector>
