--- a/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
+++ b/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
@@ -8,10 +8,15 @@
         <import type="com.letter.inklauncher.utils.ChannelUtils" />
         <import type="android.view.View" />
         <import type="com.letter.inklauncher.LetterApplication" />
+        <import type="androidx.preference.PreferenceManager" />
+        <import type="com.letter.inklauncher.viewmodel.LauncherViewModel" />
 
         <variable
             name="onClickListener"
             type="OnClickListener" />
+        <variable
+            name="vm"
+            type="LauncherViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,31 +35,50 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="2020.10.08" />
 
-        <ImageButton
-            android:id="@+id/setting_button"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:background="@null"
-            android:onClick="@{view -> onClickListener.onClick(view)}"
-            android:padding="8dp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_settings"
-            tools:ignore="contentDescription" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/clear_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:background="@null"
-            android:onClick="@{view -> onClickListener.onClick(view)}"
-            android:padding="8dp"
-            android:visibility="@{ChannelUtils.INSTANCE.isMiReader(LetterApplication.instance()) ? View.VISIBLE : View.GONE}"
-            app:layout_constraintEnd_toStartOf="@+id/setting_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_clear_mem"
-            tools:ignore="contentDescription" />
+            <ImageButton
+                android:id="@+id/lock_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:background="@null"
+                android:onClick="@{view -> onClickListener.onClick(view)}"
+                android:padding="8dp"
+                android:visibility="@{vm.showLockButton ? View.VISIBLE : View.GONE}"
+                app:srcCompat="@drawable/ic_launcher_lock"
+                tools:ignore="contentDescription" />
+
+            <ImageButton
+                android:id="@+id/clear_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:background="@null"
+                android:onClick="@{view -> onClickListener.onClick(view)}"
+                android:padding="8dp"
+                android:visibility="@{ChannelUtils.INSTANCE.isMiReader(LetterApplication.instance()) ? View.VISIBLE : View.GONE}"
+                app:srcCompat="@drawable/ic_launcher_clear_mem"
+                tools:ignore="contentDescription" />
+
+            <ImageButton
+                android:id="@+id/setting_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@null"
+                android:onClick="@{view -> onClickListener.onClick(view)}"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_launcher_settings"
+                tools:ignore="contentDescription" />
+
+        </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
