--- a/app/src/main/res/layout/fragment_simple_time.xml
+++ b/app/src/main/res/layout/fragment_simple_time.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:format12Hour="hh:mm"
-                android:format24Hour="hh:mm"
+                android:format24Hour="HH:mm"
                 android:textSize="96sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
