新增 熄屏常显支持横屏 优化 不开启熄屏常显功能时，也可以通过桌面按钮进入常显

--- a/app/src/main/res/xml/setting_preferences.xml
+++ b/app/src/main/res/xml/setting_preferences.xml
@@ -22,6 +22,12 @@
             android:title="@string/setting_enable_aod_title"
             android:summary="@string/setting_enable_aod_summary" />
 
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="aod_landscape"
+            android:title="@string/setting_aod_landscape_title"
+            android:summary="@string/setting_aod_landscape_summary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/setting_group_system">
