新增 双击锁屏

--- a/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
+++ b/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
@@ -21,15 +21,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" >
 
         <TextClock
+            android:id="@+id/time_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:format12Hour="yyyy.MM.dd EE"
             android:format24Hour="yyyy.MM.dd EE"
             android:textSize="18sp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{view -> onClickListener.onClick(view)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
