新增 触摸反馈

--- a/app/src/main/res/layout/layout_launcher_app_item.xml
+++ b/app/src/main/res/layout/layout_launcher_app_item.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:focusable="true"
         android:clickable="true"
+        android:background="@drawable/bg_button"
         android:onClick="@{view->itemClickPresenter.onItemClick(adapter, position)}"
         android:onLongClick="@{()->itemLongClickPresenter.onItemLongClick(adapter, position)}">
 
