--- a/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
+++ b/app/src/main/res/layout/layout_launcher_bottom_toolbar.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
-                android:background="@null"
+                android:background="@drawable/bg_button"
                 android:onClick="@{view -> onClickListener.onClick(view)}"
                 android:padding="8dp"
                 android:visibility="@{vm.showLockButton ? View.VISIBLE : View.GONE}"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
-                android:background="@null"
+                android:background="@drawable/bg_button"
                 android:onClick="@{view -> onClickListener.onClick(view)}"
                 android:padding="8dp"
                 android:visibility="@{ChannelUtils.INSTANCE.isMiReader(LetterApplication.instance()) ? View.VISIBLE : View.GONE}"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:background="@null"
+                android:background="@drawable/bg_button"
                 android:onClick="@{view -> onClickListener.onClick(view)}"
                 android:padding="8dp"
                 app:srcCompat="@drawable/ic_launcher_settings"
